objects/Case.object
<CustomObject>
    <fields>
        <fullName>ModelGUID__c</fullName>
        <description>For Private Wealth case, populated by the portal</description>
        <label>Model GUID</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ModelInvestmentChanges__c</fullName>
        <description>For Private Wealth Case. Detailed changes when creating/editing a model to be displayed in "Details" field</description>
        <label>Model Investment Changes</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>ModelName__c</fullName>
        <description>For Private Wealth Case, populated by the portal</description>
        <label>Model Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ModelType__c</fullName>
        <description>For Private Wealth Case, populated by the portal</description>
        <label>Model Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Investment Professional Pre-Defined</fullName>
                </value>
                <value>
                    <fullName>Firm Pre-Defined</fullName>
                </value>
                <value>
                    <fullName>Universal Pre-Defined</fullName>
                </value>
                <value>
                    <fullName>Customized</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MyTerritoryCases__c</fullName>
        <formula>IF( Requestor__r.ActivityTerritoryName__c  =  $User.ActivityTerritoryName__c , true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>My Territory Cases</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NDA__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Artemus.Request.is_NDA
bit</description>
        <label>NDA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NeedsIPMAttachment__c</fullName>
        <formula>IsIPMCase__c &amp;&amp;  TEXT(Format__c) = "Customized" &amp;&amp;  AttachmentNumber__c = 0</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Needs IPM Attachment?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NewOrExistingBusiness__c</fullName>
        <label>New Or Existing Business</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New Business</fullName>
                </value>
                <value>
                    <fullName>Existing Business</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NewProductStrategy__c</fullName>
        <description>New institutional business product (as an alternative to specifying existing Product/Strategy)</description>
        <inlineHelpText>New institutional business product (as an alternative to specifying existing Product/Strategy)</inlineHelpText>
        <label>New Product/Strategy</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>NumberofCases__c</fullName>
        <description>Power of One field to aid in reporting</description>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number of Cases</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OnTimeDelayed__c</fullName>
        <formula>IF(IsClosed,
   IF(DueDate__c &gt;= DATEVALUE( ClosedDate ),
      "On Time",
      IF(DueDate__c &lt; DATEVALUE(ClosedDate),
         "Delayed",
         "No Due Date"
      )
   ),
   IF(DueDate__c &lt; TODAY(), "Delayed", IF (DueDate__c &gt;= TODAY(), "Not Yet Due", "No Due Date"))
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>On Time/Delayed</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OpportunityExpectedAssets__c</fullName>
        <formula>Opportunity__r.Amount</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Expected Assets</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OpportunityExpectedCloseDate__c</fullName>
        <formula>Opportunity__r.CloseDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Expected Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OpportunityStage__c</fullName>
        <formula>TEXT(Opportunity__r.StageName)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Stage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Size__c</fullName>
        <description>A field to support the Affiliate Request form.</description>
        <label>Opportunity Size</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OriginalModelName__c</fullName>
        <description>Used to Capture the Model Name for an Advisor Portal Case.</description>
        <label>Original Model Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>OtherReason__c</fullName>
        <description>Other Reason for Late Delivery</description>
        <inlineHelpText>Other Reason for Late Delivery</inlineHelpText>
        <label>Other Reason</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PBStep__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used by Process Builder</description>
        <label>PB Step</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PWAccountTypeOther__c</fullName>
        <description>Specify other account type</description>
        <label>Account Type Other</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PWAccountType__c</fullName>
        <description>Type of account being opened</description>
        <label>Account Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Individual</fullName>
                </value>
                <value>
                    <fullName>Joint</fullName>
                </value>
                <value>
                    <fullName>Sole Proprietor</fullName>
                </value>
                <value>
                    <fullName>IRA</fullName>
                </value>
                <value>
                    <fullName>Keogh</fullName>
                </value>
                <value>
                    <fullName>Custodian (UGMA/UTMA)</fullName>
                </value>
                <value>
                    <fullName>Corporation</fullName>
                </value>
                <value>
                    <fullName>Endowment</fullName>
                </value>
                <value>
                    <fullName>Foundation</fullName>
                </value>
                <value>
                    <fullName>Charitable Trust</fullName>
                </value>
                <value>
                    <fullName>Limited Partnership</fullName>
                </value>
                <value>
                    <fullName>General Partnership</fullName>
                </value>
                <value>
                    <fullName>Limited Liability Company</fullName>
                </value>
                <value>
                    <fullName>Trust</fullName>
                </value>
                <value>
                    <fullName>Other (specify)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PWActive__c</fullName>
        <defaultValue>false</defaultValue>
        <description>For Private Wealth Case, to indicate the requestor is active or not</description>
        <label>Requestor Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PWAddress1__c</fullName>
        <description>For Private Wealth Case, display the requestor's information</description>
        <label>Requestor Address 1</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PWAddress2__c</fullName>
        <description>For Private Wealth Case, display the requestor's information</description>
        <label>Requestor Address 2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PWAllocationRisk__c</fullName>
        <description>A numeric field for Private Wealth Case</description>
        <label>Allocation Risk</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PWApproxOpeningValue__c</fullName>
        <label>Approximate Opening Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PWCaseID__c</fullName>
        <description>Numeric PW Portal ID field so Cases can be sorted and for reports. The field that is integrated with the portal is actually PWPortalId. The Field will be blank if PWPortalId includes "_OLD" or "_REQ".</description>
        <formula>IF (AND((PWPortalId__c &lt;&gt; "00000"),NOT(CONTAINS(PWPortalId__c,"OLD")),NOT(CONTAINS(PWPortalId__c,"REQ"))), VALUE(PWPortalId__c), Null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PW Case ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PWCity__c</fullName>
        <description>For Private Wealth Case, display the requestor's information</description>
        <label>Requestor City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PWClientRiskScore__c</fullName>
        <label>Client Risk Score</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PWCountry__c</fullName>
        <description>For Private Wealth Case, display the requestor's information</description>
        <label>Requestor Country</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PWCustodianNameOLD__c</fullName>
        <description>No longer used. Required to open an account</description>
        <inlineHelpText>Required to open an account</inlineHelpText>
        <label>Custodian Name OLD</label>
        <length>100</length>
        <maskChar>X</maskChar>
        <maskType>lastFour</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>PWCustodianName__c</fullName>
        <description>Required to open an account. Bi-Directional for new Cases, P to SFDC for updates</description>
        <inlineHelpText>Required to open an account</inlineHelpText>
        <label>Custodian Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PWDocumentVoided__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The document attached to the case is declined or void. Populated by Process Builder - Case PW Document Declined</description>
        <inlineHelpText>The document attached to the case is declined or void. Please accept the Case and determine the next steps.</inlineHelpText>
        <label>Document Voided</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PWEmail__c</fullName>
        <description>For Private Wealth Case, display the requestor's information</description>
        <label>Requestor Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>PWFirmID__c</fullName>
        <description>Firm ID provide by Portal when creating a New Requestor or Update Requestor case</description>
        <label>Firm Portal ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PWFirmName__c</fullName>
        <description>Firm name for New Requestor requests</description>
        <label>Firm Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PWFirmSFID__c</fullName>
        <description>Used to associate the firm to the Case</description>
        <label>Firm SFID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PWMobilePhone__c</fullName>
        <description>For Private Wealth Case, display the requestor's information</description>
        <label>Requestor Mobile Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>PWOfficePhoneExt__c</fullName>
        <description>For Private Wealth Case, display the requestor's information</description>
        <label>Requestor Office Phone Extension</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PWOfficePhone__c</fullName>
        <description>For Private Wealth Case, display the requestor's information</description>
        <label>Requestor Office Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>PWParentCase__c</fullName>
        <description>This field identified a Child case that is a new parent based on document revisions. The Portal will change the PW PortalID of the original parent by added the word OLD to the ID and set the PW Portal ID of the new child Parent case to the original PW Portal ID.</description>
        <formula>AND (NOT(ISNULL(PWPortalId__c)),(PWPortalId__c &lt;&gt; "00000"),NOT(CONTAINS(PWPortalId__c,"OLD")))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PW Parent Case</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PWPortalId__c</fullName>
        <defaultValue>'000000'</defaultValue>
        <description>Private Wealth Portal instance ID</description>
        <inlineHelpText>Private Wealth Portal instance ID</inlineHelpText>
        <label>Private Wealth Case ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PWPortalStatusUpdate__c</fullName>
        <description>Show the time when the portal status update</description>
        <inlineHelpText>Show the time when the portal status update</inlineHelpText>
        <label>Portal Status Update</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>PWPortalStatus__c</fullName>
        <description>For Private Wealth Case, one-directional update, SFDC to P</description>
        <label>PW Portal Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Needs More Information</fullName>
                </value>
                <value>
                    <fullName>Needs Signature</fullName>
                </value>
                <value>
                    <fullName>Returned for Revision</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PWReqorPortalID__c</fullName>
        <description>For Private Wealth Case, display the requestor's information</description>
        <label>Requestor Portal ID</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PWRequestDate__c</fullName>
        <description>Used to establish link between Portal and Vestmark</description>
        <label>Private Wealth Request Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>PWRequesterFirstName__c</fullName>
        <description>For Private Wealth Case, displaying requestor's information, one-sync-direction, P to SFDC</description>
        <label>Requester First Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PWRequesterLastName__c</fullName>
        <description>For Private Wealth Case, displaying requestor's information, one-sync-direction, P to SFDC</description>
        <label>Requester Last Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PWSpecialInstructions__c</fullName>
        <description>For Private Wealth Case, returned for revision. Bi-Directional for new Cases, P to SFDC for updates</description>
        <label>Special Instructions</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PWState__c</fullName>
        <description>For Private Wealth Case, display the requestor's information</description>
        <label>Requestor State</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PWSuitabilityRisk__c</fullName>
        <defaultValue>false</defaultValue>
        <description>For Private Wealth Case, populated by the portal.</description>
        <label>Suitability Risk</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PWType__c</fullName>
        <description>For Private Wealth Case, display the requestor's information</description>
        <label>Requestor Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Investment Professional</fullName>
                </value>
                <value>
                    <fullName>Firm Administrator</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PWZip__c</fullName>
        <description>For Private Wealth Case, display the requestor's information</description>
        <label>Requestor Zip</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ParentCasePortalID__c</fullName>
        <description>For Private Wealth Case, Portal ID of Parent Case</description>
        <inlineHelpText>Portal ID of Parent Case</inlineHelpText>
        <label>Parent Case Portal ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ParentFirmOrFirm__c</fullName>
        <description>For Private Wealth Case report, formula field to display parent firm name or firm name</description>
        <formula>IF(NOT(ISBLANK(Account.Parent.Name)),Account.Parent.Name,Account.Name)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Firm or Firm</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ParentStatus__c</fullName>
        <description>For Private Wealth Case, formula field to display Status of Parent Case</description>
        <formula>TEXT(Parent.Status)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Salesforce Status of Parent Case</inlineHelpText>
        <label>Parent Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PartialLiquidationInstructions__c</fullName>
        <description>For Private Wealth Case, test field, Bi-Directional for new Cases, P to SFDC for updates</description>
        <label>Partial Liquidation Instructions</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Participants_and_Titles__c</fullName>
        <description>Field to support the Affiliate Request process</description>
        <inlineHelpText>Enter all of the participant names and titles.  Please ensure that they are associated to the Firm names entered.</inlineHelpText>
        <label>Participants and Titles</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>PortalConsultant__c</fullName>
        <formula>Contact.FullServiceConsultant__r.FirstName  &amp; " " &amp;  Contact.FullServiceConsultant__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Portal Consultant</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PortalEmail__c</fullName>
        <formula>Contact.PortalEmail__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Portal Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PortalName__c</fullName>
        <description>Auto populated from the same field displayed on the Rep/Contact Details page.</description>
        <formula>Contact.PortalName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Auto populated from the same field displayed on the Rep/Contact Details page.</inlineHelpText>
        <label>Portal Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PortalSalesperson__c</fullName>
        <formula>Contact.PortalSalesperson__r.FirstName &amp; " "  &amp; Contact.PortalSalesperson__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Portal Salesperson</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PortalUser__c</fullName>
        <description>Auto populated from the same field displayed on the Rep/Contact Details page.</description>
        <formula>TEXT( Contact.PortalStatus__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Auto populated from the same field displayed on the Rep/Contact Details page.</inlineHelpText>
        <label>Portal User</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PostcallNotes__c</fullName>
        <description>artemus.postcall.next_steps
nvarchar(512)
+ 
artemus.postcall.comments
nvarchar(2048)</description>
        <label>Postcall Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ProductStrategyMutualFund__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Product/Strategy or Mutual Fund related to the RFI/RFP</description>
        <inlineHelpText>Product/Strategy or Mutual Fund related to the RFI/RFP</inlineHelpText>
        <label>Product/Strategy/Mutual Fund</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PublicComment__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Set to True if a public (published) comment has been added to a case</description>
        <label>Public Comment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Purpose__c</fullName>
        <label>Purpose</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Addition to Platform</fullName>
                </value>
                <value>
                    <fullName>Addition to Recommended List</fullName>
                </value>
                <value>
                    <fullName>Addition to Model</fullName>
                </value>
                <value>
                    <fullName>New or Existing Mandate</fullName>
                </value>
                <value>
                    <fullName>Due Diligence</fullName>
                </value>
                <value>
                    <fullName>Ad Hoc Inquiry</fullName>
                </value>
                <value>
                    <fullName>Performance Reporting</fullName>
                </value>
                <value>
                    <fullName>Marketing Deliverable</fullName>
                </value>
                <value>
                    <fullName>Shareholder Reporting</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RFIRFPStatus2__c</fullName>
        <formula>IF (
	(TEXT(Status)= "On Hold"),"0 - On Hold",
	(IF ((TEXT(Status)= "New"), "1 - New",
	(IF ((TEXT(Status)= "Assigned"), "2 - Assigned",
	(IF ((TEXT(Status)= "In Progress"), "3 - In Progress",
	(IF ((TEXT(Status)= "Review by a team leader"), "4 - Review by a team leader",
	(IF ((TEXT(Status)= "with Affiliate"), "5 - with Affiliate",
	(IF ((TEXT(Status)= "with Subject Matter Expert (internal)"), "6 - with Subject Matter Expert(internal)",
	(IF ((TEXT(Status)= "with Legal"), "7 - with Legal","")
))))))))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RFI RFP Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RPIDnotEqualPWID__c</fullName>
        <description>This field is used in Private Wealth Portal reporting for Client Services. The formula is true if Requester Portal ID &lt;&gt; as the related Contact’s Private Wealth ID</description>
        <formula>PWReqorPortalID__c &lt;&gt; Contact.PWPortalId__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This field is used in Private Wealth Portal reporting for Client Services. The formula is true if Requester Portal ID &lt;&gt; as the related Contact’s Private Wealth ID</inlineHelpText>
        <label>RPIDnotEqualPWID</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reason_for_Late_Delivery__c</fullName>
        <description>Custome picklist field, showing what is the reason for the Late Delivery</description>
        <inlineHelpText>What is the reason for the Late Delivery</inlineHelpText>
        <label>Reason for Late Delivery</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Held up at affiliate</fullName>
                </value>
                <value>
                    <fullName>Held up at legal/compliance</fullName>
                </value>
                <value>
                    <fullName>Capacity constraints</fullName>
                </value>
                <value>
                    <fullName>Unreasonable deadline</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RebalancingMethodology__c</fullName>
        <description>Methodology to use when rebalancing account</description>
        <label>Rebalancing Methodology</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Rebalance using drift bands</fullName>
                </value>
                <value>
                    <fullName>Rebalance to new target allocations</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RecipientStatus__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>For Private Wealth Case, showing the status of Recipient</description>
        <label>Recipient Status</label>
        <referenceTo>dsfs__DocuSign_Recipient_Status__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RecordTypeFormat__c</fullName>
        <formula>RecordType.Name &amp; " - " &amp;  TEXT(Format__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Record Type - Format</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RecurrenceDate__c</fullName>
        <description>Set by the recurrence batch, can be overridden.</description>
        <inlineHelpText>The due date of the next occurrence of this case.  Override to change the due date if necessary.  The due date must be set before the next occurrence is created.</inlineHelpText>
        <label>Recurrence Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RecurrenceSourceCase__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>If this case is automatically generated via the recurrence batch, this field indicates from which case it was cloned.</description>
        <label>Recurrence Source Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Cases (Recurrence Source Case)</relationshipLabel>
        <relationshipName>RecurrenceSourceCases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RecurrenceTargetCase__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>If this case was created automatically via the recurrence batch, this field indicates which case was cloned from this case to set up the recurrence.</description>
        <label>Recurrence Target Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Cases (Recurrence Target Case)</relationshipLabel>
        <relationshipName>RecurrenceTargetCases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RequestArtemusID__c</fullName>
        <externalId>true</externalId>
        <label>Artemus Request ID</label>
        <length>38</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>RequestDate__c</fullName>
        <description>Artemus.Request.request_dt
datetime</description>
        <label>Request Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>RequestFirm__c</fullName>
        <description>A field to support the Affiliate Request process.</description>
        <inlineHelpText>This request is for the following Firms.</inlineHelpText>
        <label>Request for Firm(s)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RequestFor__c</fullName>
        <description>Auto populated from the same field displayed on the Rep/Contact Details page.</description>
        <formula>TEXT(Contact.RequestFor__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Auto populated from the same field displayed on the Rep/Contact Details page.</inlineHelpText>
        <label>Request for</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RequestPRCCallWithFA__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Artemus.Request.is_prc_consultation
char(1)</description>
        <label>Request PRC Call With FA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RequestType__c</fullName>
        <description>Artemus.Request.request_type_id
varchar(100). request_type_id maps to values in code_desc table with cd_type = 'RT'</description>
        <label>Request Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New Request</fullName>
                </value>
                <value>
                    <fullName>Follow-up</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RequestedDates__c</fullName>
        <description>Field to be populated to start the Affiliate Request process.  Once the requests are approved then the actual Affiliate attendance dates are captured as Events associated to the Request.</description>
        <inlineHelpText>Field to be populated to start the Affiliate Request process.  Once the requests are approved then the actual Affiliate attendance dates are captured as Events associated to the Request.</inlineHelpText>
        <label>Requested Date(s)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RequestedSpeakers__c</fullName>
        <description>Field to be populated to start the Affiliate Request process.  Once the requests are approved then the actual Affiliate speakers are captured in the Events associated to the Request. Lookup Rollup Summary: https://globalplatform.my.salesforce.com/a0m2A00000MwtJm</description>
        <inlineHelpText>Field to be populated to start the Affiliate Request process.  Once the requests are approved then the actual Affiliate speakers are captured in the Events associated to the Request.</inlineHelpText>
        <label>Requested Speaker(s)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RequesterChannel__c</fullName>
        <formula>IF(  ISBLANK(SubmittedOnBehalfOf__c) ,   Requestor__r.ActivityChannelName__c  ,   SubmittedOnBehalfOf__r.ActivityChannelName__c  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Requester Channel</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RequesterLoggedIn__c</fullName>
        <formula>IF( Requestor__r.Id  =  $User.Id , "true", "false")</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Requester Logged In</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RequesterTerritory__c</fullName>
        <formula>IF(  ISBLANK(SubmittedOnBehalfOf__c) ,   Requestor__r.ActivityRegionDept__c  ,   SubmittedOnBehalfOf__r.ActivityRegionDept__c  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Requester Territory</label>
        <type>Text</type>
    </fields>
</CustomObject>